test/conformance/chainsaw/validating-policies/webhook-configuration/fine-grained-tests/match-conditions/output.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  annotations:
    admissions.enforcer/disabled: "true"
  creationTimestamp: "2025-08-24T17:47:43Z"
  generation: 4
  labels:
    webhook.kyverno.io/managed-by: kyverno
  name: kyverno-resource-validating-webhook-cfg
  resourceVersion: "2194"
  uid: 6bc261a7-ce27-4075-9eaf-cefba4b14e36
webhooks:
- admissionReviewVersions:
  - v1
  clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUM3VENDQWRXZ0F3SUJBZ0lCQURBTkJna3Foa2lHOXcwQkFRc0ZBREFZTVJZd0ZBWURWUVFEREEwcUxtdDUKZG1WeWJtOHVjM1pqTUI0WERUSTFNRGd5TkRFMk5EYzBNMW9YRFRJMk1EZ3lOREUzTkRjME0xb3dHREVXTUJRRwpBMVVFQXd3TktpNXJlWFpsY201dkxuTjJZekNDQVNJd0RRWUpLb1pJaHZjTkFRRUJCUUFEZ2dFUEFEQ0NBUW9DCmdnRUJBTWltVnd5VkFOOXozNTcxM1VUY0p0NkNKU2lqWWFDZDdmWW1waHV3dlRNcURWeWxlRDRwNWlrb1llWlkKMEJTWjZHRitweDA3VjV2RUVkWkZsMERNRHJ4S0MrQ3FuTUFpR3JXY3FkaGVKQVhxNXdjRHV6RkpxcmR1ZE11YwpuKzNnWmd2YlQxd0 [...]
    service:
      name: kyverno-svc
      namespace: kyverno
      path: /vpol/disallow-privilege-escalation-b
      port: 443
  failurePolicy: Fail
  matchConditions:
  - expression: has(object.metadata.labels) && has(object.metadata.labels.prod) &&
      object.metadata.labels.prod == 'true'
    name: check-prod-label
  matchPolicy: Equivalent
  name: vpol.validate.kyverno.svc-fail-finegrained-disallow-privilege-escalation-b
  namespaceSelector:
    matchExpressions:
    - key: kubernetes.io/metadata.name
      operator: NotIn
      values:
      - kube-system
    - key: kubernetes.io/metadata.name
      operator: NotIn
      values:
      - kyverno
    matchLabels:
      key: environment
      operator: In
      values: staging
  objectSelector: {}
  rules:
  - apiGroups:
    - ""
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - pods
    scope: '*'
  sideEffects: NoneOnDryRun
  timeoutSeconds: 10
- admissionReviewVersions:
  - v1
  clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUM3VENDQWRXZ0F3SUJBZ0lCQURBTkJna3Foa2lHOXcwQkFRc0ZBREFZTVJZd0ZBWURWUVFEREEwcUxtdDUKZG1WeWJtOHVjM1pqTUI0WERUSTFNRGd5TkRFMk5EYzBNMW9YRFRJMk1EZ3lOREUzTkRjME0xb3dHREVXTUJRRwpBMVVFQXd3TktpNXJlWFpsY201dkxuTjJZekNDQVNJd0RRWUpLb1pJaHZjTkFRRUJCUUFEZ2dFUEFEQ0NBUW9DCmdnRUJBTWltVnd5VkFOOXozNTcxM1VUY0p0NkNKU2lqWWFDZDdmWW1waHV3dlRNcURWeWxlRDRwNWlrb1llWlkKMEJTWjZHRitweDA3VjV2RUVkWkZsMERNRHJ4S0MrQ3FuTUFpR3JXY3FkaGVKQVhxNXdjRHV6RkpxcmR1ZE11YwpuKzNnWmd2YlQxd0 [...]
    service:
      name: kyverno-svc
      namespace: kyverno
      path: /vpol/disallow-privilege-escalation
      port: 443
  failurePolicy: Fail
  matchPolicy: Equivalent
  name: vpol.validate.kyverno.svc-fail
  namespaceSelector:
    matchExpressions:
    - key: kubernetes.io/metadata.name
      operator: NotIn
      values:
      - kube-system
    - key: kubernetes.io/metadata.name
      operator: NotIn
      values:
      - kyverno
  objectSelector: {}
  rules:
  - apiGroups:
    - ""
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - pods
    scope: '*'
  sideEffects: NoneOnDryRun
  timeoutSeconds: 10
